# tokenhabit

./: .gitignore  README.ko.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  pattern_suggestion.md
_workspace/01_research/: patterns_active.md  patterns_passive.md
_workspace/03_review/: review.md  review_v1.1.md
_workspace/04_competitive/: github_scan.md  practices_scan.md
_workspace/05_latest_research/: RESEARCH-2026-LATEST-TOKEN-WASTE-PATTERNS.md  TOKENHABIT-INTEGRATION-NOTES.md  token-habit-analysis-2026.md
_workspace/06_launch/: demo.cast  demo.tape  launch_posts.md  make_demo_logs.py
_workspace/06_launch/demo-logs/demo-project/: session-1.jsonl  session-2.jsonl  session-3.jsonl
_workspace/07_thumbnail/: package-lock.json  shot.js  thumb_en.html  thumb_ko.html
skill/: SKILL.md
skill/references/: habit_catalog.md  measurement_and_hooks.md  session_coach_checklist.md
skill/scripts/: habit_scan.py  hook_check.py
tokenhabit/: __init__.py  catalog.py  cli.py  report.py  scan.py
